tests/invariants/pass/type_constraints.act
contract AllEnvVars

constructor
interface constructor()

creates
	uint value := 5

invariants
	value >= 0
