tests/invariants/fail/constructor-type-bounds.act
contract C

constructor()

creates

    int totalSupply := -1

invariants

    totalSupply > 0
